<resources>
    <string name="app_name">Homework6</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="jemali">jemali</string>
    <string name="jemalauri">jemalauri</string>
    <string name="jemala98_hotmail_com">jemala98@hotmail.com</string>
    <string name="_2001">2001</string>
    <string name="male">Male</string>
    <string name="edit_info">Edit Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="female">FeMale</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
</resources>