<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/profPic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@drawable/user_pic"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/jemali"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profPic" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/jemalauri"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/jemala98_hotmail_com"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/birthData"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/_2001"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/male"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthData" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex" />

</androidx.constraintlayout.widget.ConstraintLayout>