<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SecondActivity">

    <EditText
        android:layout_marginTop="100dp"
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameET" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameET" />

    <EditText
        android:id="@+id/birthDateET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/birth_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailET" />



    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDateET" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDateET">

        <RadioButton
            android:id="@+id/maleBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="454dp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/femaleBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="454dp"
            android:checked="false"
            />


    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>